# sunshine

./: README.md  pyproject.toml
.github/workflows/: test.yml
sunshine/: app.py
tests/: conftest.py  test_app.py
