[tool.poetry]
name = "sunshine"
version = "0.1.0"
description = "A webapp that shows the user when the sunrise and sunset is for the location of the user."
authors = [
    "Artur Miller <amiller89@gmx.de>"
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = "^0.12.3"
requests = "^2.28.2"
suntime = "^1.2.5"
geopy = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^21.0b1"
ruff = "0.0.239"
httpx = "^0.23.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

